# icon选择器修改

--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -40,7 +40,7 @@
                     <input type="text" id="iconPicker2" name="icon" value="layui-icon-face-smile" lay-filter="iconPicker2" class="hide">
                 </div>
                 <div class="layui-input-inline" style="width: unset">
-                    <span class="layui-btn" id="clear">清空</span>
+                    <span class="layui-btn layui-btn-primary" id="clear">清空</span>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
         let table = layui.table;
         icon.render({
             elem: '#iconPicker2',
-            style: 'color: #5FB878;'
+            style: 'color: #0052d9;'
             ,placeholder: ''
             ,isSplit: true
             ,page: false
