--- a/app/admin/view/administrator/permission/index.html
+++ b/app/admin/view/administrator/permission/index.html
@@ -79,6 +79,16 @@
             return [width + 'px', height + 'px'];
         }
 
+        function miniScreen(){
+            if (typeof width !== 'number' || width === 0) {
+                width = $(window).width() * 0.5;
+            }
+            if (typeof height !== 'number' || height === 0) {
+                height = $(window).height() * 0.5;
+            }
+            return [width + 'px', height + 'px'];
+        }
+
         treetable.render({
             treeColIndex: 1,
             treeSpid: 0,
@@ -138,12 +148,10 @@
                 type: 2,
                 title: '新增',
                 shade: 0.1,
-                area: screen(),
+                area: miniScreen(),
                 content: '{:url("add")}'
             });
         }
-
-        console.log( screen())
 
         window.edit = function(obj){
             layer.open({
