--- a/public/static/admin/css/admin.css
+++ b/public/static/admin/css/admin.css
@@ -1123,6 +1123,9 @@ div.layui-layer.layui-layer-msg{
 /* popup 表单按钮组 start */
 .popup-contain{
     padding: 25px 18px;
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
 }
 
 .bottom{
@@ -1174,4 +1177,23 @@ div.layui-layer.layui-layer-msg{
     top: 38px;
     border-radius: 5px;
     box-shadow: 1px 1px 10px 0px #9d9d9d6e;
+}
+
+.layui-iconpicker{
+    height: 34px;
+    line-height: 34px;
+    transition: all cubic-bezier(.38,0,.24,1) .2s;
+}
+.layui-iconpicker .layui-inline{
+    height: 32px;
+    line-height: 32px;
+}
+.layui-iconpicker-down{
+    border-color: var(--td-brand-color) !important;
+    box-shadow: 0 0 0 2px var(--td-brand-color-focus);
+}
+
+.layui-iconpicker-search > .layui-input-wrap{
+    height: 34px;
+    line-height: 34px;
 }
