--- a/public/static/admin/css/admin.css
+++ b/public/static/admin/css/admin.css
@@ -1197,3 +1197,8 @@ div.layui-layer.layui-layer-msg{
     height: 34px;
     line-height: 34px;
 }
+
+.input-focus{
+    border-color: var(--td-brand-color) !important;
+    box-shadow: 0 0 0 2px var(--td-brand-color-focus);
+}
