--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -253,7 +253,7 @@
                         ,{field: 'path', title: '路径', width: 155}
                     ]]
                     ,id:curID
-                    //,skin: 'line' //表格风格
+                    ,skin: 'line' //表格风格
                     ,even: true
                     //,page: true //是否显示分页
                     //,limits: [5, 7, 10]
