--- a/app/admin/view/administrator/permission/index.html
+++ b/app/admin/view/administrator/permission/index.html
@@ -148,7 +148,7 @@
                 type: 2,
                 title: '新增',
                 shade: 0.1,
-                area: miniScreen(),
+                area: ['700px','670px'],
                 content: '{:url("add")}'
             });
         }
