--- a/public/static/admin/css/admin.css
+++ b/public/static/admin/css/admin.css
@@ -1137,6 +1137,7 @@ div.layui-layer.layui-layer-msg{
     line-height: 50px;
     background-color: #F8F8F8;
     border-top: 1px solid #eee;
+    border-radius: 0 0 10px 10px;
 }
 
 .button-container{
@@ -1176,7 +1177,9 @@ div.layui-layer.layui-layer-msg{
     max-width: 845px;
     top: 38px;
     border-radius: 5px;
-    box-shadow: 1px 1px 10px 0px #9d9d9d6e;
+    box-shadow: 1px 1px 10px 0 #9d9d9d6e;
+    height: 250px;
+    overflow: scroll;
 }
 
 .layui-iconpicker{
