# 权限编辑页面增加权限类型

--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -49,6 +49,7 @@
             <div class="layui-input-block">
                 <input type="radio" name="type" value="0" title="目录" checked>
                 <input type="radio" name="type" value="1" title="菜单">
+                <input type="radio" name="type" value="2" title="按钮">
             </div>
         </div>
         <div class="layui-form-item">
