--- a/app/admin/view/administrator/permission/index.html
+++ b/app/admin/view/administrator/permission/index.html
@@ -60,11 +60,12 @@
 <script src="/static/admin/layui/layui.all.js"></script>
 <script src="/static/admin/config.js"></script>
 <script>
-    layui.use(['table','form','jquery','treetable'],function () {
+    layui.use(['table','form','jquery','treetable','loading'],function () {
         let table = layui.table;
         let form = layui.form;
         let $ = layui.jquery;
         let treetable = layui.treetable;
+        let loading = layui.loading;
 
         let MODULE_PATH = "../system/operate/";
 
@@ -164,9 +165,12 @@
         }
 
         window.remove = function(obj){
-            layer.confirm('确定要删除该权限', {icon: 3, title:'提示'}, function(index){
+            layer.confirm('确定要删除该权限', { title:'提示'}, function(index){
                 layer.close(index);
-                let loading = layer.load();
+                // let loading = layer.load();
+                loading.load({
+                    bg:false
+                })
                 $.ajax({
                     url: MODULE_PATH+"remove/"+obj.data['powerId'],
                     dataType:'json',
@@ -180,6 +184,13 @@
                         }else{
                             layer.msg(result.msg,{icon:2,time:1000});
                         }
+                    },
+                    error:function (res) {
+                        loading.clear({
+                            done:function () {
+                                layer.msg(res.msg,{icon:2,time:1000});
+                            }
+                        });
                     }
                 })
             });
