--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -7,6 +7,7 @@
     <title>layui-tdesign Admin</title>
     <link rel="stylesheet" href="static/admin/layui/css/layui.css">
     <link rel="stylesheet" href="static/admin/css/admin.css?v={:time()}">
+    <link rel="stylesheet" href="static/admin/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
 
