--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -77,7 +77,7 @@
 <script src="/static/admin/layui/layui.all.js"></script>
 <script src="/static/admin/config.js"></script>
 <script>
-    layui.use(['form','element','icon','jquery','request','radio'],function () {
+    layui.use(['form','element','icon','jquery','request','elems'],function () {
         let icon= layui.icon;
         let $ = layui.jquery;
         let form = layui.form;
