--- a/public/static/admin/component/css/elems.css
+++ b/public/static/admin/component/css/elems.css
@@ -1,12 +1,4 @@
-.layui-radio-group{
-
-}
-
-.layui-radio-group{
-
-
-}
-
+/* radio 按钮组 start */
 .layui-radio-group > .layui-btn{
     background-color: #fff;
     padding: 4px 16px;
@@ -20,25 +12,22 @@
     color: rgba(0, 0, 0, .9);
     white-space: nowrap;
 }
-
 .layui-radio-group > .layui-btn:hover {
     color: #0052d9;
 }
-
 .layui-radio-group > .layui-btn:first-child {
     border-radius: 5px 0 0 5px;
     border-left:1px solid #dcdcdc;
 }
-
 .layui-radio-group > .layui-btn:last-child {
     border-right: 1px solid;
     border-right-color: #dcdcdc;
     border-radius: 0 5px 5px 0;
 }
-
 .layui-radio-group > .layui-btn.layui-this{
     border-right: 1px solid;
     border-color: #0052d9;
     transition: border-color .2s cubic-bezier(0,0,.32,1);
     color: #0052d9;
 }
+/* radio 按钮组 end */
