--- a/public/static/admin/component/css/elems.css
+++ b/public/static/admin/component/css/elems.css
@@ -31,3 +31,25 @@
     color: #0052d9;
 }
 /* radio 按钮组 end */
+
+/* 数组输入框步进器 start */
+.number-input{
+    display: flex;
+    max-width: 215px;
+}
+.number-input .plus-btn{
+    border-radius: 0 5px 5px 0;
+}
+.number-input .minus-btn{
+    border-radius: 5px 0 0 5px;
+}
+.number-input input{
+    -moz-appearance:textfield;
+    border-radius: 0;
+    text-align: center;
+    border-color: var(--td-brand-color);
+}
+.number-input input::-webkit-outer-spin-button {
+    -webkit-appearance: none;	/* 有无看不出差别 */
+}
+/* 数组输入框步进器 end */
