--- a/app/admin/view/administrator/permission/add.html
+++ b/app/admin/view/administrator/permission/add.html
@@ -35,7 +35,7 @@
         <div class="layui-form-item">
             <label for="" class="layui-form-label">地址</label>
             <div class="layui-input-block">
-                <input type="prompt" href="{:url('getPermissionList')}" field="path" name="href" placeholder="请输入地址" class="layui-input" >
+                <input type="prompt" href="{:url('getPermissionList')}" field="path" name="href" placeholder="请输入地址" class="layui-input" autocomplete="off">
             </div>
         </div>
         <div class="layui-form-item">
