--- a/app/admin/view/administrator/permission/index.html
+++ b/app/admin/view/administrator/permission/index.html
@@ -72,29 +72,6 @@
             treetable.reload("#power-table");
         }
 
-        let MODULE_PATH = "../system/operate/";
-
-        //弹出窗设置 自己设置弹出百分比
-        function screen() {
-            if (typeof width !== 'number' || width === 0) {
-                width = $(window).width() * 0.8;
-            }
-            if (typeof height !== 'number' || height === 0) {
-                height = $(window).height() * 0.8;
-            }
-            return [width + 'px', height + 'px'];
-        }
-
-        function miniScreen(){
-            if (typeof width !== 'number' || width === 0) {
-                width = $(window).width() * 0.5;
-            }
-            if (typeof height !== 'number' || height === 0) {
-                height = $(window).height() * 0.5;
-            }
-            return [width + 'px', height + 'px'];
-        }
-
         treetable.render({
             treeColIndex: 1,
             treeSpid: 0,
@@ -155,10 +132,7 @@
                 title: '新增',
                 shade: 0.1,
                 area: ['700px','670px'],
-                content: '{:url("add")}',
-                yes:function (layero) {
-                    console.log(layero)
-                }
+                content: '{:url("add")}'
             });
         }
 
@@ -168,7 +142,7 @@
                 title: '修改',
                 shade: 0.1,
                 area: ['450px', '500px'],
-                content: MODULE_PATH + 'edit.html'
+                content: '{:url("")}'
             });
         }
 
